add MD5 hash checking